--- a/contact-me.html
+++ b/contact-me.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact Me</title>
+  </head>
   <body>
     <h1>Contact Me</h1>
-    <a href="/">Back to home</a>
+    <a href="http://localhost:8080/">Back to Homepage</a>
   </body>
 </html>
